@@ -38,4 +38,5 @@
 *Changed dinosaurs drinking AI to rely more on their mental features
 *Fixed wrong T. Rex skull rotation
 +Corals now render properly underwater (waterlogged effect)
+*Fixed Helicopter graphical glitch in water
 *Fixed incompatibility with BOP
